<resources>
    <string name="app_name">খোঁজ | Sagashidasui</string>
    <string name="location_permission_denied">GPS service denied by user</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="pin_title">Title</string>
    <string name="pin_details">Details ......</string>
    <string name="pin_create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="pin_create_dialog">Create Pin</string>
    <string name="open_camera">Open Camera</string>
    <string name="help">Help</string>
    <string name="show_all">Show Alls</string>
    <string name="hide_pin">Hide Pins</string>
    <string name="hide_user_location">Hide User\'s Location</string>
</resources>