<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/show_all"
            android:icon="@drawable/ic_baseline_filter_list_24"
            android:title="@string/show_all" />
        <item
            android:id="@+id/hide_pin"
            android:icon="@drawable/ic_baseline_filter_list_24"
            android:title="@string/hide_pin" />
        <item
            android:id="@+id/hide_user_location"
            android:icon="@drawable/ic_baseline_filter_list_24"
            android:title="@string/hide_user_location" />
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/help"
            android:visible="true"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/help" />
        <item
            android:id="@+id/logout"
            android:visible="false"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />
    </group>
</menu>