<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:id="@+id/content"
    tools:context=".ui.Home.PinCreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="0dp"
            android:id="@+id/view2"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="rectangle"
            android:thicknessRatio="1.9">
            <ImageView
                android:tooltipText="@string/open_camera"
                android:layout_height="100dp"
                android:layout_width="match_parent"
                android:id="@+id/pin_image"
                android:src="@mipmap/island"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/create_pin_progress"
            android:visibility="gone"
            android:tooltipText="Creating pin"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="58dp" />
        <EditText
            android:id="@+id/pin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/pin_title"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/pin_details"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_multiline_background"
            android:fontFamily="sans-serif"
            android:hint="@string/pin_details"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin">
            <Button
                android:id="@+id/cancel_action"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/create_pin"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin_create" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>